Embed SVG images as ``<svg>`` instead of data-URI.
+1 Ca. 1/3 less data, readable source, interactive SVG.
-1 Beware of "id" clashes!

Fixes [feature-request:#100]

git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9517 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ sandbox/**/index.html
 /docutils/test/alltests.out
 /docutils/test/record.txt
 /docutils/test/functional/output/*
+/docutils/test/extra/output/*
