Fix indentation and avoid raw strings in pyproject.toml
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9797 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/pyproject.toml
+++ b/docutils/pyproject.toml
@@ -21,57 +21,57 @@ urls.Homepage = "https://docutils.sourceforge.io"
 license.file = "COPYING.txt"
 requires-python = ">=3.9"
 
-# cf. https://pypi.org/trove-classifiers/
+# Classifiers list: https://pypi.org/classifiers/
 classifiers = [
-        'Development Status :: 4 - Beta',
-        'Environment :: Console',
-        'Intended Audience :: End Users/Desktop',
-        'Intended Audience :: Other Audience',
-        'Intended Audience :: Developers',
-        'Intended Audience :: System Administrators',
-        'License :: Public Domain',
-        'License :: OSI Approved :: Python Software Foundation License',
-        'License :: OSI Approved :: BSD License',
-        'License :: OSI Approved :: GNU General Public License (GPL)',
-        'Operating System :: OS Independent',
-        'Programming Language :: Python :: 3',
-        'Programming Language :: Python :: 3 :: Only',
-        'Programming Language :: Python :: 3.9',
-        'Programming Language :: Python :: 3.10',
-        'Programming Language :: Python :: 3.11',
-        'Topic :: Documentation',
-        'Topic :: Software Development :: Documentation',
-        'Topic :: Text Processing',
-        'Natural Language :: English',  # main/default language, keep first
-        'Natural Language :: Afrikaans',
-        'Natural Language :: Arabic',
-        'Natural Language :: Catalan',
-        'Natural Language :: Catalan (Valencian)',
-        'Natural Language :: Chinese (Simplified)',
-        'Natural Language :: Chinese (Traditional)',
-        'Natural Language :: Czech',
-        'Natural Language :: Danish',
-        'Natural Language :: Dutch',
-        'Natural Language :: Esperanto',
-        'Natural Language :: Finnish',
-        'Natural Language :: French',
-        'Natural Language :: Galician',
-        'Natural Language :: Georgian',
-        'Natural Language :: German',
-        'Natural Language :: Hebrew',
-        'Natural Language :: Italian',
-        'Natural Language :: Japanese',
-        'Natural Language :: Korean',
-        'Natural Language :: Latvian',
-        'Natural Language :: Lithuanian',
-        'Natural Language :: Persian',
-        'Natural Language :: Polish',
-        'Natural Language :: Portuguese (Brazilian)',
-        'Natural Language :: Russian',
-        'Natural Language :: Slovak',
-        'Natural Language :: Spanish',
-        'Natural Language :: Swedish',
-        'Natural Language :: Ukrainian',
+    "Development Status :: 4 - Beta",
+    "Environment :: Console",
+    "Intended Audience :: End Users/Desktop",
+    "Intended Audience :: Other Audience",
+    "Intended Audience :: Developers",
+    "Intended Audience :: System Administrators",
+    "License :: Public Domain",
+    "License :: OSI Approved :: Python Software Foundation License",
+    "License :: OSI Approved :: BSD License",
+    "License :: OSI Approved :: GNU General Public License (GPL)",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Topic :: Documentation",
+    "Topic :: Software Development :: Documentation",
+    "Topic :: Text Processing",
+    "Natural Language :: English",  # main/default language, keep first
+    "Natural Language :: Afrikaans",
+    "Natural Language :: Arabic",
+    "Natural Language :: Catalan",
+    "Natural Language :: Catalan (Valencian)",
+    "Natural Language :: Chinese (Simplified)",
+    "Natural Language :: Chinese (Traditional)",
+    "Natural Language :: Czech",
+    "Natural Language :: Danish",
+    "Natural Language :: Dutch",
+    "Natural Language :: Esperanto",
+    "Natural Language :: Finnish",
+    "Natural Language :: French",
+    "Natural Language :: Galician",
+    "Natural Language :: Georgian",
+    "Natural Language :: German",
+    "Natural Language :: Hebrew",
+    "Natural Language :: Italian",
+    "Natural Language :: Japanese",
+    "Natural Language :: Korean",
+    "Natural Language :: Latvian",
+    "Natural Language :: Lithuanian",
+    "Natural Language :: Persian",
+    "Natural Language :: Polish",
+    "Natural Language :: Portuguese (Brazilian)",
+    "Natural Language :: Russian",
+    "Natural Language :: Slovak",
+    "Natural Language :: Spanish",
+    "Natural Language :: Swedish",
+    "Natural Language :: Ukrainian",
 ]
 dynamic = ["version"]
 
