Enable the flake8-executable linter in Ruff
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9822 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -5,9 +5,10 @@ output-format = "full"
 [lint]
 preview = true
 select = [
-    "E",  # pycodestyle
-    "F",  # pyflakes
-    "W",  # pycodestyle
+    "E",    # pycodestyle
+    "EXE",  # flake8-executable
+    "F",    # pyflakes
+    "W",    # pycodestyle
 ]
 ignore = [
     "E226",  # missing whitespace around arithmetic operator
@@ -100,6 +101,11 @@ ignore = [
 ]
 "docutils/writers/odf_odt/__init__.py" = [
     "F841",
+]
+
+# shebang to enable unbuffered mode
+"test/alltests.py" = [
+    "EXE003",
 ]
 
 # included configuration files referencing externally defined variables
