Enable the flake8-future-annotations linter in Ruff
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9823 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -8,6 +8,7 @@ select = [
     "E",    # pycodestyle
     "EXE",  # flake8-executable
     "F",    # pyflakes
+    "FA",   # flake8-future-annotations
     "W",    # pycodestyle
 ]
 ignore = [
