Enable the flake8-import-conventions linter in Ruff
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9824 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -9,6 +9,7 @@ select = [
     "EXE",  # flake8-executable
     "F",    # pyflakes
     "FA",   # flake8-future-annotations
+    "ICN",  # flake8-import-conventions
     "W",    # pycodestyle
 ]
 ignore = [
