Enable the flake8-no-pep420 linter in Ruff
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9825 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -10,6 +10,7 @@ select = [
     "F",    # pyflakes
     "FA",   # flake8-future-annotations
     "ICN",  # flake8-import-conventions
+    "INP",  # flake8-no-pep420
     "W",    # pycodestyle
 ]
 ignore = [
@@ -113,6 +114,7 @@ ignore = [
 # included configuration files referencing externally defined variables
 "test/functional/tests/*" = [
     "F821",
+    "INP001",
 ]
 
 # deprecated module, will be removed
