Enable the flake8-gettext linter in Ruff
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9826 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -11,6 +11,7 @@ select = [
     "FA",   # flake8-future-annotations
     "ICN",  # flake8-import-conventions
     "INP",  # flake8-no-pep420
+    "INT",  # flake8-gettext
     "W",    # pycodestyle
 ]
 ignore = [
