Enable the flake8-logging linter in Ruff
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9827 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -12,6 +12,7 @@ select = [
     "ICN",  # flake8-import-conventions
     "INP",  # flake8-no-pep420
     "INT",  # flake8-gettext
+    "LOG",  # flake8-logging
     "W",    # pycodestyle
 ]
 ignore = [
