Enable the flake8-raise linter in Ruff
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9832 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -17,6 +17,7 @@ select = [
     "PGH",  # pygrep-hooks
     "PIE",  # flake8-pie
     "PT",   # flake8-pytest
+    "RSE",  # flake8-raise
     "W",    # pycodestyle
 ]
 ignore = [
