Enable the flake8-slots linter in Ruff
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9833 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -18,6 +18,7 @@ select = [
     "PIE",  # flake8-pie
     "PT",   # flake8-pytest
     "RSE",  # flake8-raise
+    "SLOT", # flake8-slots
     "W",    # pycodestyle
 ]
 ignore = [
