--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -20,6 +20,7 @@ select = [
     "RSE",  # flake8-raise
     "SLOT", # flake8-slots
     "T10",  # flake8-debugger
+    "TCH",  # flake8-type-checking
     "W",    # pycodestyle
 ]
 ignore = [
