--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -21,6 +21,7 @@ select = [
     "SLOT", # flake8-slots
     "T10",  # flake8-debugger
     "TCH",  # flake8-type-checking
+    "TID",  # flake8-tidy-imports
     "W",    # pycodestyle
 ]
 ignore = [
