Enable the flake8-2020 linter in Ruff
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9837 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -23,6 +23,7 @@ select = [
     "TCH",  # flake8-type-checking
     "TID",  # flake8-tidy-imports
     "W",    # pycodestyle
+    "YTT",  # flake8-2020
 ]
 ignore = [
     "E226",  # missing whitespace around arithmetic operator
