Enable the flake8-datetimez linter in Ruff
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9838 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -7,6 +7,7 @@ preview = true
 select = [
     "E",    # pycodestyle
     "EXE",  # flake8-executable
+    "DTZ",  # flake8-datetimez
     "F",    # pyflakes
     "FA",   # flake8-future-annotations
     "G",    # flake8-logging-format
