Enable the flake8-comprehensions linter in Ruff
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9839 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -5,6 +5,7 @@ output-format = "full"
 [lint]
 preview = true
 select = [
+    "C4",   # flake8-comprehensions
     "E",    # pycodestyle
     "EXE",  # flake8-executable
     "DTZ",  # flake8-datetimez
