Enable the refurb linter in Ruff
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9841 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -12,6 +12,7 @@ select = [
     "DTZ",  # flake8-datetimez
     "F",    # pyflakes
     "FA",   # flake8-future-annotations
+    "FURB", # refurb
     "G",    # flake8-logging-format
     "ICN",  # flake8-import-conventions
     "INP",  # flake8-no-pep420
