Rename utf-16-le-sig.{txt -> rst} in pre-commit-config
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@10021 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
     -   id: trailing-whitespace
         exclude: ^sandbox|(.el|.svg|.tex|pseudoxml.txt)$
     -   id: end-of-file-fixer
-        exclude: ^sandbox|(.svg|docutils/test/data/utf-16-le-sig.txt)$
+        exclude: ^sandbox|(.svg|docutils/test/data/utf-16-le-sig.rst)$
 
 -   repo: https://github.com/pycqa/flake8
     rev: 7.1.0
