--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -12,6 +12,7 @@ select = [
     "EXE",  # flake8-executable
     "F",    # pyflakes
     "FA",   # flake8-future-annotations
+    "FLY",  # flynt
     "FURB", # refurb
     "G",    # flake8-logging-format
     "ICN",  # flake8-import-conventions
@@ -21,7 +22,8 @@ select = [
     "PERF", # perflint
     "PGH",  # pygrep-hooks
     "PIE",  # flake8-pie
-    "PT",   # flake8-pytest
+    "PLE",   # pylint-error
+    "PT",   # flake8-pytest-style
     "RSE",  # flake8-raise
     "SLOT", # flake8-slots
     "T10",  # flake8-debugger
