Enable the ISC (flake8-implicit-str-concat) category in Ruff
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@10039 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -18,6 +18,7 @@ select = [
     "ICN",  # flake8-import-conventions
     "INP",  # flake8-no-pep420
     "INT",  # flake8-gettext
+    "ISC",  # flake8-implicit-str-concat
     "LOG",  # flake8-logging
     "PERF", # perflint
     "PGH",  # pygrep-hooks
