Enable strict mode for flake8-type-checking in Ruff
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@10044 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -28,7 +28,7 @@ select = [
     "RSE",  # flake8-raise
     "SLOT", # flake8-slots
     "T10",  # flake8-debugger
-    "TCH",  # flake8-type-checking
+    "TC",   # flake8-type-checking
     "TID",  # flake8-tidy-imports
     "UP",   # pyupgrade
     "W",    # pycodestyle
@@ -194,3 +194,7 @@ builtins-ignorelist = [
     "format",
     "id",
 ]
+
+[lint.flake8-type-checking]
+exempt-modules = []
+strict = true
