Introduce a private typing utility module
This eliminates all first-party runtime imports of the typing module,
and centralises version checks for new features (such as TypeAlias)
in one place.


git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@10046 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/.ruff.toml
+++ b/docutils/.ruff.toml
@@ -4,6 +4,8 @@ output-format = "full"
 
 [lint]
 preview = true
+typing-modules = ["docutils.utils._typing"]
+
 select = [
     "A",    # flake8-builtins
     "C4",   # flake8-comprehensions
